Fix CD playing.  Thanks to Markus Kaufhold for the patch.

BUG: 127388

svn path=/trunk/extragear/multimedia/amarok/; revision=541256